# honeybibleManager

./: .gitignore  CLAUDE.md  README.md  education_config.json  pyproject.toml  requirements.txt  server.py
app/: analytics.py  analyzer.py  completion.py  date_parser.py  drive_uploader.py  emoji.py  file_processor.py  handler.py  image_builder.py  logger.py  merger.py  output_builder.py  schedule.py  style_constants.py  txt_parser.py
public/: app.js  index.html  styles.css
resources/samples/: KakaoTalkChats (1).txt  KakaoTalk_20260214_1409_12_938_group.txt
scripts/: backend_request.md  frontend_request.md  get_google_token.py
tests/: test_analytics.py  test_analyzer.py  test_date_parser.py  test_drive_uploader.py  test_emoji.py  test_handler.py  test_image_builder.py  test_logger.py  test_merger.py  test_schedule.py  test_txt_parser.py
